cabal-version:      3.0
name:               hap
version:            0.0
synopsis:           Hap Programming Language
-- description:
license:            MIT
license-file:       LICENSE
author:             Jon Purdy
maintainer:         evincarofautumn@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common options
    ghc-options: -Wall

common dependencies
    build-depends:
        async                   ^>= 2.2.5,
        bytestring              ^>= 0.11.5,
        containers              ^>= 0.6.8,
        dlist                   ^>= 1.0,
        mtl                     ^>= 2.3.1,
        optics                  ^>= 0.4.2,
        prettyprinter           ^>= 1.7.1,
        stm                     ^>= 2.5.3.1,
        strict                  ^>= 0.5,
        text                    ^>= 2.1,
        transformers            ^>= 0.6.1,

library
    import:                     dependencies, options

    default-language:           GHC2021
    exposed-modules:            Hap
    hs-source-dirs:             lib

    build-depends:
        base                    ^>= 4.19.1.0

executable hap
    import:                     dependencies, options

    default-language:           GHC2021
    ghc-options:                -threaded
                                "-with-rtsopts=-N"
                                -fno-omit-yields
                                -fprof-auto
    hs-source-dirs:             src
    main-is:                    Main.hs

    build-depends:
        base                    ^>= 4.19.1.0,
        hap,
        haskeline               ^>= 0.8.2,
        optparse-applicative    ^>= 0.18.1,
        sdl2                    ^>= 2.5.5.0

test-suite hap-test

    import:           options

    default-language: GHC2021
    hs-source-dirs:   test
    main-is:          Main.hs
    type:             exitcode-stdio-1.0

    build-depends:
        base                    ^>= 4.19.1.0,
        hap
